test/libsolidity/syntaxTests/functionTypes/delete_function_type_invalid.sol
contract C {
    function f() public {
        delete f;
    }
}
// ----
// TypeError: Expression has to be an lvalue.
